# farmsmart

./: .gitignore  .replit  DEPLOY.md  GCP_IMPLEMENTATION_PLAN.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  tsconfig.json
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  farmeasy-clerk-upgrade.md  farmeasy-db-arrays.md  farmeasy-orval-mutations.md
artifacts/admin-dashboard/: DESIGN.md  index.html  package.json
artifacts/admin-dashboard/.replit-artifact/: artifact.toml
artifacts/admin-dashboard/src/: App.tsx  index.css  main.tsx
artifacts/api-server/: package.json
artifacts/api-server/src/: app.ts  index.ts
artifacts/farmeasy/: app.json  eas.json  package.json
artifacts/farmeasy/.replit-artifact/: artifact.toml
artifacts/farmeasy/app/: _layout.tsx  alerts.tsx  ask.tsx  search.tsx  (+2 more)
artifacts/recommender-svc/: .gitignore  pyproject.toml
artifacts/recommender-svc/app/: auth.py  cache_repo.py  config.py  db.py  embed_upsert.py  embeddings.py  farm_context.py  ingest.py  main.py  models.py  query_log.py  synthesis.py
docs/: alpha-app.md  metrics-data-dictionary.md  metrics-design.md  metrics-implementation.md
frontend-mobile/: package-lock.json
lib/api-spec/: openapi.yaml
lib/db/: DATABASE-EVALUATION.md  drizzle.config.ts  package.json
lib/metrics/: package.json
scripts/: import-seed-lots.ts  package.json  seed-carousel-yield.sql  seed-demo.sql  seed-lots.sql  seed-phase8-realistic-data.sql
scripts/src/: seed-demo-data.ts
tests/: package.json  playwright.config.ts
tests/e2e/: farmeasy.spec.ts
(+148 files in other folders)
