[project]
name = "recommender-svc"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "asyncpg>=0.31.0",
    "dlt[postgres]>=1.28.1",
    "fastapi>=0.139.0",
    "google-genai>=2.10.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.50.0",
]
